tests/compilation_failure_tests/iteration_order/duplicate_different.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
#[iteration_order(A, B, C)]
#[iteration_order(C, B, A)]
enum Enum {
    A, B, C
}
